--- a/src/index.html
+++ b/src/index.html
@@ -15,70 +15,51 @@
 <body>
     <div class="container">
         <div class="container__calc">
-            <form class="calc" name="calculator">
+            <div class="calc">
                 <div class="battery_stat">
-                    <h3>Battery</h3>
-                    <div class="point">
-                        <label>
-                            <h4>Voltage</h4>
-                            <select class="battery_voltage select-css" name="battery_volt">
-                                <option selected value="24">24</option>
-                                <option value="36">36</option>
-                                <option value="48">48</option>
-                                <option value="80">80</option>
-                            </select>
-                            <span>V</span>
-                        </label>
-
-                        <label>
-                            <h4>Capacity</h4>
-                            <select class="battery_capacity" name="battery_cap">
-                                <option selected value="206">206</option>
-                                <option value="412">412</option>
-                                <option value="554">554</option>
-                                <option value="618">618</option>
-                            </select>
-                            <span>Ah</span>
-                        </label>
-
-                        <label>
-                            <h4>Energy</h4>
-                            <span class="power_batt">4.94 kWh</span>
-                        </label>
+                    <h3 class="grid1">Battery</h3>
+                    <h4>Voltage</h4>
+                    <h4>Capacity</h4>
+                    <h4>Energy</h4>
+                    <div class="param">
+                        <select class="battery_voltage select-css" name="battery_volt">
+                            <option selected value="24">24</option>
+                            <option value="36">36</option>
+                            <option value="48">48</option>
+                            <option value="80">80</option>
+                        </select>
+                        <span>V</span>
                     </div>
-                    <div class="block_row">
-                        <div>
-                            <h3>Charger</h3>
-                            <div class="point">
-                                <label>
-                                    <h4>Rate</h4>
-                                    <select name="charge_rate" class="charge_rate">
-                                        <option value="0.1">0.1</option>
-                                        <option value="0.2">0.2</option>
-                                        <option selected value="0.5">0.5</option>
-                                        <option value="1">1</option>
-                                    </select>
-                                    <span>C</span>
-                                </label>
-                                <label>
-                                    <h4>Current</h4>
-                                    <span class="charge_current">103.0 A</span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="last_label">
-                            <h3>Truck</h3>
-                            <div class="point">
-                                <label>
-                                    <h4>Consumption</h4>
-                                    <input class="power_truck" value="0.2">
-                                    <span>kWh/h</span>
-                                </label>
-                            </div>
-                        </div>
+                    <div class="param">
+                        <select class="battery_capacity" name="battery_cap">
+                            <option selected value="206">206</option>
+                            <option value="412">412</option>
+                            <option value="554">554</option>
+                            <option value="618">618</option>
+                        </select>
+                        <span>Ah</span>
+                    </div>
+                    <span class="power_batt">4.94 kWh</span>
+                    <h3 class="grid2">Charger</h3>
+                    <h3 class="grid3">Truck</h3>
+                    <h4>Rate</h4>
+                    <h4>Current</h4>
+                    <h4>Consumption</h4>
+                    <div class="param">
+                        <select name="charge_rate" class="charge_rate">
+                            <option value="0.1">0.1</option>
+                            <option value="0.2">0.2</option>
+                            <option selected value="0.5">0.5</option>
+                            <option value="1">1</option>
+                        </select>
+                        <span>C</span>
+                    </div>
+                    <span class="charge_current">103.0 A</span>
+                    <div class="param">
+                        <input class="power_truck" value="0.2">
+                        <span>kWh/h</span>
                     </div>
                 </div>
-
                 <div class="stop_time">
                     <div>
                         <h3 class="breaks">Breaks</h3>
@@ -97,22 +78,19 @@
                         </div>
                         <div class="equel">Calculate</div>
                     </div>
-
                     <div class="stash block_column">
-                        <div class="post s0"><span class="time_step" id="p0">12:00 | 13:00</span>
+                        <div class="post s0"><span class="time_step" id="p0">12:00 - 13:00</span>
                             <span class="del" id="d0">&#215;</span>
                         </div>
-                        <div class="post s1"><span class="time_step" id="p1">18:00 | 19:00</span>
+                        <div class="post s1"><span class="time_step" id="p1">18:00 - 19:00</span>
                             <span class="del" id="d1">&#215;</span>
                         </div>
                     </div>
                 </div>
-
-            </form>
+            </div>
         </div>
         <div class="container__plot">
             <div class="result">
-                <!-- <h3>Statistic</h3> -->
                 <div class="res_tick">Max SOC<span class="max_soc"></span></div>
                 <div class="res_tick">Min SOC<span class="min_soc"></span></div>
                 <div class="res_tick">Working<span class="working"></span></div>
@@ -124,8 +102,9 @@
                 <div class="containerPlot" id="chart"></div>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-        <script src="js/script.js"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
