--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/timepicker.css">
     <script src="js/jquery.min.js"></script>
 
     <title>Document</title>
@@ -49,6 +50,7 @@
                         <select name="charge_rate" class="charge_rate">
                             <option value="0.1">0.1</option>
                             <option value="0.2">0.2</option>
+                            <option value="0.3">0.3</option>
                             <option selected value="0.5">0.5</option>
                             <option value="1">1</option>
                         </select>
@@ -56,7 +58,7 @@
                     </div>
                     <span class="charge_current">103.0 A</span>
                     <div class="param">
-                        <input class="power_truck" value="0.2">
+                        <input class="power_truck" value="0.2" pattern="0-9">
                         <span>kWh/h</span>
                     </div>
                 </div>
@@ -67,11 +69,11 @@
                             <div class="block_column">
                                 <label>
                                     <span>Start</span>
-                                    <input class="start" type="time">
+                                    <input type="text" class="bs-timepicker start">
                                 </label>
                                 <label>
                                     <span>Stop</span>
-                                    <input class="stop" type="time">
+                                    <input type="text" class="bs-timepicker stop">
                                 </label>
                             </div>
                             <span class="plus">+</span>
@@ -104,7 +106,11 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="js/timepicker.js"></script>
     <script src="js/script.js"></script>
+    <script>
+		$('.bs-timepicker').timepicker();
+	</script>
 </body>
 
 </html>
