--- a/src/index.html
+++ b/src/index.html
@@ -69,11 +69,11 @@
                             <div class="block_column">
                                 <label>
                                     <span>Start</span>
-                                    <input type="text" class="bs-timepicker start">
+                                    <input type="text" class="bs-timepicker start" value="12:00">
                                 </label>
                                 <label>
                                     <span>Stop</span>
-                                    <input type="text" class="bs-timepicker stop">
+                                    <input type="text" class="bs-timepicker stop" value="13:00">
                                 </label>
                             </div>
                             <span class="plus">+</span>
